# hooksh

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  check_copyright.py  setup.cfg  setup.py
my_package/: .pre-commit-hooks.yaml
